<resources>
    <string name="app_name">Dev-intensive</string>
    <string name="profile_label_rating">Рейтинг</string>
    <string name="profile_label_respect">Уважение</string>
    <string name="profile_hint_repo">Репозиторий</string>
    <string name="profile_hint_about">О себе</string>
    <string name="profile_hint_last_name">Фамилия</string>
    <string name="profile_hint_first_name">Имя</string>
    <string name="menu_search">Поиск</string>
    <string name="_0">0</string>
    <plurals name="seconds">
        <item quantity="one">секунда</item>
        <item quantity="two">секуды</item>
        <item quantity="few">секунд</item>
    </plurals>
</resources>
