<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.profile.ProfileActivity"
        android:orientation="vertical">

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ru.skillbranch.devintensive.ui.custom.AspectRatioImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/profile_bg"
                android:scaleType="centerCrop"
                app:aspectRatio="3"/>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/spacing_normal_16">

            <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    tools:text="John Smith"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/iv_avatar"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/font_large_20"
                    android:fontFamily="sans-serif-medium"
                    android:layout_marginTop="@dimen/spacing_normal_16"
                    />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Junior Development"
                    android:id="@+id/tv_rank"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/tv_name"
                    android:textColor="@android:color/white"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="@dimen/font_normal_16"
                    />

            <ImageButton
                    android:layout_width="@dimen/btn_round_size_40"
                    android:layout_height="@dimen/btn_round_size_40"
                    android:background="@drawable/btn_round_bg"
                    android:src="@drawable/ic_edit_black_24dp"
                    android:layout_toEndOf="@id/iv_avatar"
                    android:layout_marginStart="@dimen/spacing_huge_32"
                    android:layout_marginTop="@dimen/spacing_huge_36"/>
            <ImageView
                    android:id="@+id/iv_avatar"
                    android:layout_width="@dimen/avatar_round_size"
                    android:layout_height="@dimen/avatar_round_size"
                    android:src="@drawable/avatar_default"
                    android:layout_centerHorizontal="true"/>
            <ImageButton
                    android:layout_width="@dimen/btn_round_size_40"
                    android:layout_height="@dimen/btn_round_size_40"
                    android:background="@drawable/btn_round_bg"
                    android:src="@drawable/ic_baseline_brightness_high_24"
                    android:layout_toStartOf="@id/iv_avatar"
                    android:layout_marginEnd="@dimen/spacing_huge_32"
                    android:layout_marginTop="@dimen/spacing_huge_36"/>

        </RelativeLayout>
    </FrameLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_primary_light">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="@dimen/spacing_normal_16"
                android:paddingBottom="@dimen/spacing_normal_16">

            <TextView
                    android:id="@+id/textView2"
                    android:text="0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="@dimen/font_large_20"
                    android:textColor="@android:color/white"
                    android:drawablePadding="@dimen/spacing_tiny_4"
                    app:drawableLeftCompat="@drawable/ic_sp_24" />

            <TextView
                    android:id="@+id/textView"
                    android:text="@string/profile_label_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/font_normal_16"/>
        </LinearLayout>
        <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/color_divider_light"
                android:layout_marginTop="@dimen/spacing_normal_16"
                android:layout_marginBottom="@dimen/spacing_normal_16"/>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="@dimen/spacing_normal_16"
                android:paddingBottom="@dimen/spacing_normal_16">

            <TextView
                    android:text="0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView4"
                    android:layout_gravity="center"
                    android:textSize="@dimen/font_large_20"
                    android:textColor="@android:color/white"
                    android:drawablePadding="@dimen/spacing_tiny_4"
                    app:drawableLeftCompat="@drawable/ic_respect_24" />

            <TextView
                    android:id="@+id/textView3"
                    android:text="@string/profile_label_respect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/font_normal_16"
                    />
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_normal_16">
        <ImageView
                android:id="@+id/ic_avatar"
                android:layout_width="@dimen/btn_round_size_40"
                android:layout_height="@dimen/btn_round_size_40"
                android:src="@drawable/ic_avatar" />
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/wr_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_normal_16"
                android:layout_toEndOf="@id/ic_avatar">
            <EditText
                    android:id="@+id/et_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/profile_hint_first_name"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/ic_avatar"
                android:layout_below="@id/wr_first_name"
                android:layout_marginStart="@dimen/spacing_normal_16">
            <EditText
                    android:id="@+id/et_last_Name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/profile_hint_last_name"/>
        </com.google.android.material.textfield.TextInputLayout>
    </RelativeLayout>
    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_divider_dark"
            android:layout_marginStart="@dimen/space_maximum_72"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_normal_16">
        <ImageView
                android:layout_width="@dimen/btn_round_size_40"
                android:layout_height="@dimen/btn_round_size_40"
                android:src="@drawable/ic_about" />
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_normal_16">
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/profile_hint_about"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_divider_dark"
            android:layout_marginStart="@dimen/space_maximum_72"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_normal_16">
        <ImageView
                android:layout_width="@dimen/btn_round_size_40"
                android:layout_height="@dimen/btn_round_size_40"
                android:src="@drawable/ic_repo"/>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_normal_16"
                android:layout_weight="1">
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/profile_hint_repository"/>
        </com.google.android.material.textfield.TextInputLayout>
        <ImageButton
                android:layout_width="24dp"
                android:layout_height="24dp"
            android:src="@drawable/ic_eye_24dp"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>
</LinearLayout>